<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_cpp_custom_msg</name>
  <version>0.0.0</version>
  <description>Tutoial ROS2 CPP YOLO dengan custom message</description>
  <maintainer email="adityagading265@gmail.com">rusaven</maintainer>
  <license>Rusaven</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> <!-- untuk custom msg -->

  <!-- buat dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend> <!-- untuk custom msg -->

  <!-- buat executable dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> <!-- untuk custom msg -->

  <member_of_group>rosidl_interface_packages</member_of_group> <!-- untuk custom msg -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>